sprint 3 hint and test file added refactoring added