@@ -1,18 +1,46 @@
 import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 
 public class Board {
+    private Map<Integer, ArrayList<Checker>> board1;
+    private Map<String, ArrayList<Checker>> bar;
+    private Map<String, Integer> bearOff;
     private ArrayList<ArrayList<Checker>> board;
     private ArrayList<Checker> barX = new ArrayList<>();
     private ArrayList<Checker> barO = new ArrayList<>();
     private ArrayList<Checker> bearoffAreaPlayer1 = new ArrayList<>();
     private ArrayList<Checker> bearoffAreaPlayer2 = new ArrayList<>();
+
+    private PipCalculator pipCalculator;
    // private Validation validate = new Validation(board);
     private int countXOnBar = 0;
     private int countOOnBar = 0;
 
     public Board() {
+        board1 = new HashMap<>();
+        bar = new HashMap<>();
+        bearOff = new HashMap<>();
+        pipCalculator = new PipCalculator(board1);
         initialize();
+    }
+
+
+    public Map<Integer, ArrayList<Checker>> getBoardState() {
+        return board1; // Return the internal board representation
+    }
+
+    public List<Checker> getBar(String symbol) {
+        return bar.getOrDefault(symbol, new ArrayList<>());
+    }
+
+    public int getBearOffCount(String symbol) {
+        return bearOff.getOrDefault(symbol, 0);
+    }
+
+    public List<Checker> getCheckersAt(int position) {
+        return board1.getOrDefault(position, new ArrayList<>());
     }
 
     public ArrayList<Checker> getBarX() {
@@ -36,86 +64,117 @@ public class Board {
     }
 
     public void moveChecker(int start, int end) {
-        Checker checker = board.get(start).remove(0);
-        board.get(end).add(checker);
-        System.out.println("Moved checker from position " + (start + 1) + " to " + (end + 1));
+
+        if (board1.get(start).isEmpty()) {
+            System.out.println("Invalid move: No checkers at the starting position.");
+            return;
+        }
+        Checker check = board1.get(start).remove(0);
+        board1.get(end).add(check);
+      //  Checker checker = board.get(start).remove(0);
+      //  board.get(end).add(checker);
+        System.out.println("Moved checker from position " + (start) + " to " + (end));
     }
 
-    public void moveCheckerToBoard(ArrayList<Checker> bar,int end) {
-        Checker checker = bar.remove(0);
-        board.get(end).add(checker);
-        System.out.println("Moved checker from bar " + " to " + (end + 1));
+    public void moveCheckerToBar(String symbol, int position) {
+        if (!board1.containsKey(position) || board1.get(position).isEmpty()) {
+            System.out.println("Invalid move: No checkers at the specified position.");
+            return;
+        }
+
+        Checker checker = board1.get(position).remove(0);
+        bar.get(symbol).add(checker);
+
+        System.out.println("Checker moved to bar: " + symbol);
     }
+
+    public void moveCheckerToBoard(ArrayList<Checker>bar,int end) {
+        Checker checker = bar.removeFirst();
+        board1.get(end).add(checker);
+        System.out.println("Moved checker from bar " + " to " + (end));
+    }
+
     public void executeMove(int start, int end, Player player) {
 
-        if(start == 0) {
-            ArrayList<Checker> endCheckers = board.get(end);
-           if(!barO.isEmpty()) {
-               if(barO.getFirst().getSymbol().equals(player.getSymbol())) {
-                   moveCheckerToBoard(barO,end);
+        ArrayList<Checker> barX = bar.get("X");
+        ArrayList<Checker> barO = bar.get("O");
+
+        ArrayList<Checker> endCheckers = board1.get(end);
+        ArrayList<Checker> startCheckers = board1.get(start);
+        if(start == 1) {
+           if(!barX.isEmpty()) {
+               if(barX.getFirst().getSymbol().equals(player.getSymbol())) {
+                   moveCheckerToBoard(barX,end);
                    return;
                }
            }
 
-           if(!barX.isEmpty()) {
-            if(barX.getFirst().getSymbol().equals(player.getSymbol())) {
-                moveCheckerToBoard(barX, end);
-                return;
+            if(!barO.isEmpty()) {
+                if(barO.getFirst().getSymbol().equals(player.getSymbol())) {
+                    moveCheckerToBoard(barO,end);
+                    return;
+                }
             }
-           }
 
         }
-        ArrayList<Checker> endCheckers = board.get(end);
-        ArrayList<Checker> startCheckers = board.get(start);
+
 
         if(endCheckers.size() == 1 && endCheckers.get(0).getPlayer() != startCheckers.get(0).getPlayer()) {
             Checker hitChecker = endCheckers.get(0);
             if(hitChecker.getSymbol() == "X")
-                barX.add(hitChecker);
+                bar.get("X").add(hitChecker);
             else if (hitChecker.getSymbol() == "O") {
-                barO.add(hitChecker);
+                bar.get("O").add(hitChecker);
             }
-            board.get(end).remove(hitChecker);
+            board1.get(end).remove(hitChecker);
         }
 
         moveChecker(start, end);
     }
+
+
     // Initializes the board with some example checkers
     private void initialize() {
         board = new ArrayList<>();
-        for (int i = 0; i < 24; i++) {
+        for (int i = 1; i <= 24; i++) {
             board.add(new ArrayList<>());
+            board1.put(i, new ArrayList<>());
         }
+
+        bar.put("X", new ArrayList<>());
+        bar.put("O", new ArrayList<>());
+        bearOff.put("X", 0);
+        bearOff.put("O", 0);
         setupInitialBoard();
-        // Initialise checker placement for X checkers
-        // Array 0-indexed so positions from 0-23 instead of 1-24
     }
 
     private void addChecker(int pointIndex, Checker checker) {
-        if(pointIndex >= 0 && pointIndex < board.size()) {
-            board.get(pointIndex).add(checker);
+        if(pointIndex >= 1 && pointIndex <= 24) {
+            board1.get(pointIndex).add(checker);
         } else {
             System.out.println("Invalid point index");
         }
+
+       // board1.get(pointIndex+1).add(checker);
     }
     private void setupInitialBoard() {
         // Each loop is a counter for how many checkers should be added to each point on the board
         // Each point on the board is represented by an ArrayList
         for (int i = 0; i < 2; i++) {
-            addChecker(0, new Checker("X",0));
-            addChecker(23, new Checker("O",23));
+            addChecker(1, new Checker("X",1));
+            addChecker(24, new Checker("O",24));
         }
 
         for (int i = 0; i < 5; i++) {
-            addChecker(11, new Checker("X",11));
-            addChecker(12, new Checker("O",12));
-            addChecker(18, new Checker("X",18));
-            addChecker(5, new Checker("O",5));
+            addChecker(12, new Checker("X",12));
+            addChecker(13, new Checker("O",13));
+            addChecker(19, new Checker("X",19));
+            addChecker(6, new Checker("O",6));
         }
 
         for (int i = 0; i < 3; i++) {
-            addChecker(16, new Checker("X",16));
-            addChecker(7, new Checker("O",7));
+            addChecker(17, new Checker("X",17));
+            addChecker(8, new Checker("O",8));
         }
     }
 
@@ -123,7 +182,7 @@ public class Board {
 // To find maximum number of checkers currently in a point to know the number of rows needed
     public int findCurrentMaxRows() {
         int maxRows = 0;
-        for (ArrayList<Checker> point : board) {
+        for (ArrayList<Checker> point : board1.values()) {
             if (point != null && point.size() > maxRows) {
                 maxRows = point.size();
             }
@@ -145,7 +204,7 @@ public class Board {
 //LOOK AT THIS
     public ArrayList<Checker> getCurrentPlayerCheckers(Player player) {
         ArrayList<Checker> checkers = new ArrayList<>();
-        for (ArrayList<Checker> point : board) {
+        for (ArrayList<Checker> point : board1.values()) {
             if (point.size() != 0 && point.get(0).getSymbol().equals(player.getSymbol())) {
                 checkers.add(point.getFirst());
             }
@@ -161,14 +220,6 @@ public class Board {
         int die2 = diceValues.get(1);
         for(Checker checker : getCurrentPlayerCheckers(player)){
             int startPoint =  checker.getPosition();
-           // legalMoves = canWeMakeAMove(startPoint,die1,die2,player);
-            //added to test
-//            if(canWeBearOff(player)) {
-//
-//            }
-
-
-
             if(areThereCheckersOnTheBar(player)) {
                 if(canWeMoveCheckersToBoard(die1,die2,player).isEmpty()) {
                     legalmovesboard.add("-1");
@@ -180,8 +231,6 @@ public class Board {
             } else {
                 legalMoves.addAll(canWeMakeAMove(startPoint, die1, die2, player));
             }
-
-
 
         }
 
@@ -205,8 +254,8 @@ public class Board {
         String playerSymbol = player.getSymbol();
 
         for (int newPos : newPositions) {
-            if (newPos >= 0 && newPos < board.size()) { // Check if within board bounds
-                ArrayList<Checker> checkersAtNewPos = board.get(newPos);
+            if (newPos >= 1 && newPos <= 24) { // Check if within board bounds
+                ArrayList<Checker> checkersAtNewPos = board1.get(newPos);
                 String opponentSymbol = playerSymbol.equals("X") ? "O" : "X";
 
                 int opponentCheckerCount = 0;
@@ -222,7 +271,7 @@ public class Board {
 
                 if (checkersAtNewPos.isEmpty() || opponentCheckerCount < 2 || isOwnedByPlayer) {
                     // 1 to represent board positions correctly
-                    String moveDescription = "Initial position: " + (start + 1) + ", Final position: " + (newPos + 1);
+                    String moveDescription = "Initial position: " + (start ) + ", Final position: " + (newPos );
                     potentialLegalMoves.add(moveDescription);
                 }
             }
@@ -234,12 +283,13 @@ public class Board {
 
     // Check if there are checkers on the bar for a specific player
     public boolean areThereCheckersOnTheBar(Player player) {
-        if (player.getSymbol().equals("X")) {
-            return !getBarX().isEmpty();
-        } else if (player.getSymbol().equals("O")) {
-            return !getBarO().isEmpty();
-        }
-        return false;
+        return !bar.getOrDefault(player.getSymbol(), new ArrayList<>()).isEmpty();
+//        if (player.getSymbol().equals("X")) {
+//            return !getBarX().isEmpty();
+//        } else if (player.getSymbol().equals("O")) {
+//            return !getBarO().isEmpty();
+//        }
+//        return false;
     }
 
 
@@ -257,8 +307,8 @@ public class Board {
                String playerSymbol = player.getSymbol();
 
                for (int newPos : newPositions) {
-                   if (newPos >= 0 && newPos < board.size()) { // Check if within board bounds
-                       ArrayList<Checker> checkersAtNewPos = board.get(newPos);
+                   if (newPos >= 0 && newPos < board1.size()) { // Check if within board bounds
+                       ArrayList<Checker> checkersAtNewPos = board1.get(newPos);
                        String opponentSymbol = playerSymbol.equals("X") ? "O" : "X";
 
                        int opponentCheckerCount = 0;
@@ -274,42 +324,26 @@ public class Board {
 
                        if (checkersAtNewPos.isEmpty() || opponentCheckerCount < 2 || isOwnedByPlayer) {
                            // 1 to represent board positions correctly
-                           String moveDescription = "Initial position: Bar" + ", Final position: " + (newPos + 1);
+                           String moveDescription = "Initial position: Bar" + ", Final position: " + (newPos);
                            potentialLegalMoves.add(moveDescription);
                        }
                    }
                }
                return potentialLegalMoves; // Return potential moves (empty if none found)
-
-
-
     }
 
-    /*public boolean canWeBearOff(Board board, Player player) {
-
-        if (player.getSymbol().equals("X")) {
-
-        }
-
-        if (player.getSymbol().equals("O")) {
-
-        }
-
-        return false;
-
-    }*/
 
     public boolean canWeBearOff(Player player) {
-        ArrayList<ArrayList<Checker>> boardPositions = this.getBoard();
+        Map<Integer,ArrayList<Checker>> boardPositions = this.getBoardState();
         String playerSymbol = player.getSymbol();
         int start, end;
 
         if (playerSymbol.equals("X")) {
-            start = 0;
-            end = 5;
+            start = 1;
+            end = 6;
         } else if (playerSymbol.equals("O")) {
-            start = 18;
-            end = 23;
+            start = 19;
+            end = 24;
         } else {
             return false; // Invalid symbol
         }
@@ -324,96 +358,21 @@ public class Board {
                 }
             }
         }
-
         return true; // All checkers are in the home base
     }
 
 
     public void printCheckerOnBar() {
-        if(barX.size() != 0 && barX.size() > countXOnBar) {
+        if(!bar.get("X").isEmpty() && bar.get("X").size() > countXOnBar) {
             countXOnBar += 1;
-            System.out.print(barX.get(0).getSymbol() + "     ");
-        } else if (barO.size() != 0 && barO.size() > countOOnBar) {
+            System.out.print(bar.get("X").getFirst().getSymbol() + "     ");
+        } else if (!bar.get("O").isEmpty() && bar.get("O").size() > countOOnBar) {
             countOOnBar += 1;
-            System.out.print(barO.get(0).getSymbol() + "     ");
+            System.out.print(bar.get("O").getFirst().getSymbol() + "     ");
         }
         else {
             System.out.print("BAR   ");
         }
-    }
-
-    private int getPipNumber(int position, Player player) {
-        if(player.getSymbol().equals("X")) {
-            return position + 1;
-        } else {
-            return 24 - position;
-        }
-    }
-
-    public void displayTopPipNumbers(Player player) {
-        System.out.print(" ");
-        int pipNumber;
-        int count = 0;
-        for (int i = 12; i < 18; i++) {
-             pipNumber = getPipNumber(i, player);
-            count += 1;
-            if(pipNumber < 10)
-                System.out.print("0" + pipNumber);
-            else
-                System.out.print(pipNumber);
-            if(count < 6) {
-                System.out.print("--");
-            }
-        }
-        System.out.print("  BAR   ");
-        count = 0;
-        for (int i = 18; i < 24; i++) {
-             pipNumber = getPipNumber(i, player);
-            count += 1;
-            //System.out.print(pipNumber);
-            if(pipNumber < 10)
-                System.out.print("0" + pipNumber);
-            else
-                System.out.print(pipNumber);
-            if(count < 6) {
-                System.out.print("--");
-            }
-        }
-        System.out.print("  OFF");
-        System.out.println();
-    }
-
-    public void displayBottomPipNumbers(Player player) {
-        System.out.print(" ");
-        int count = 0;
-        int pipNumber;
-        for (int i = 11; i >= 6; i--) {
-             pipNumber = getPipNumber(i, player);
-            count += 1;
-            if(pipNumber < 10)
-                System.out.print("0" + pipNumber);
-            else
-                System.out.print(pipNumber);
-            if(count < 6) {
-                System.out.print("--");
-            }
-        }
-        System.out.print("  BAR   ");
-        count = 0;
-        for (int i = 5; i >= 0; i--) {
-             pipNumber = getPipNumber(i, player);
-            count += 1;
-           // System.out.print(pipNumber);
-            if(pipNumber < 10)
-                System.out.print("0" + pipNumber);
-            else
-                System.out.print(pipNumber);
-            if(count < 6) {
-                System.out.print("--");
-            }
-        }
-        System.out.print("  OFF");
-        System.out.println();
     }
 
     public void display(Player player) {
@@ -421,19 +380,18 @@ public class Board {
         countXOnBar = 0;
         countOOnBar = 0;
 
-       // System.out.println(" 13--14--15--16--17--18  BAR   19--20--21--22--23--24  OFF");
-        displayTopPipNumbers(player);
+        pipCalculator.displayTopPipNumbers(player);
         int maxRowsNew = findCurrentMaxRows(); // Find max rows in board
 
         // Display the upper part of the board (points 12 to 23)
-        for (int row = 0; row < maxRowsNew; row++) {
+        for (int row = 0; row <= maxRowsNew-1; row++) {
             System.out.print(" "); // Just for alignment
-            for (int pointIndex = 12; pointIndex < 18; pointIndex++) {
-                printChecker(board.get(pointIndex), row);
+            for (int pointIndex = 13; pointIndex <= 18; pointIndex++) {
+                printChecker(board1.get(pointIndex), row);
             }
             printCheckerOnBar();
-            for (int pointIndex = 18; pointIndex < 24; pointIndex++) {
-                printChecker(board.get(pointIndex), row);
+            for (int pointIndex = 19; pointIndex <= 24; pointIndex++) {
+                printChecker(board1.get(pointIndex), row);
             }
             System.out.println();
         }
@@ -443,18 +401,18 @@ public class Board {
         // Display the lower part of the board (points 0 to 11 in reverse order)
         for (int row = maxRowsNew - 1; row >= 0; row--) {
             System.out.print(" ");
-            for (int pointIndex = 11; pointIndex >= 6; pointIndex--) {
-                printChecker(board.get(pointIndex), row);
+            for (int pointIndex = 12; pointIndex >= 7; pointIndex--) {
+                printChecker(board1.get(pointIndex), row);
             }
             printCheckerOnBar();
-            for (int pointIndex = 5; pointIndex >= 0; pointIndex--) {
-                printChecker(board.get(pointIndex), row);
+            for (int pointIndex = 6; pointIndex >= 1; pointIndex--) {
+                printChecker(board1.get(pointIndex), row);
             }
             System.out.println();
         }
 
-        //System.out.println(" 12--11--10--09--08--07  BAR   06--05--04--03--02--01  OFF");
-        displayBottomPipNumbers( player);
+
+        pipCalculator.displayBottomPipNumbers(player);
         System.out.println("\n"); // New line after full board
     }
 
@@ -462,24 +420,7 @@ public class Board {
 
 
     public void displayTotalPipCounts(Player playerX, Player player0) {
-        int totalPipCountX = 0;
-        int totalPipCountO = 0;
+        pipCalculator.displayTotalPipCounts(playerX, player0);
 
-        for(int i = 0; i < board.size(); i++) {
-            int point = board.get(i).size();
-            if(point != 0) {
-                int pipScoreX = (24 - i) * point; // Player X's perspective (24 to 1)
-                int pipScoreO = (i + 1) * point;   // Player O's perspective (1 to 24)
-
-                if(board.get(i).get(0).getSymbol().equals("X")) {
-                    totalPipCountX += pipScoreX;
-                } else if (board.get(i).get(0).getSymbol().equals("O")) {
-                    totalPipCountO += pipScoreO;
-                }
-            }
-        }
-
-        System.out.println("Total pip score for " + playerX.getName() + ": " + totalPipCountX);
-        System.out.println("Total pip score for " + player0.getName() + ": " + totalPipCountO);
     }
 }
